After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752767 - Fix typo in g_hash_table_replace() documentation
Fix typo in g_hash_table_replace() documentation
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: docs
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2015-07-23 09:43 UTC by Peter Meerwald
Modified: 2015-07-24 17:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ghash: Fix typo in g_hash_table_replace() documentation (830 bytes, patch)
2015-07-23 09:44 UTC, Peter Meerwald
committed Details | Review

Description Peter Meerwald 2015-07-23 09:43:28 UTC
g_hash_table_replace() return TRUE _if_ the key did not exist yet, not _of_
Comment 1 Peter Meerwald 2015-07-23 09:44:30 UTC
Created attachment 307976 [details] [review]
ghash: Fix typo in g_hash_table_replace() documentation
Comment 2 Matthias Clasen 2015-07-23 17:09:44 UTC
Review of attachment 307976 [details] [review]:

sure
Comment 3 Matthias Clasen 2015-07-24 17:13:53 UTC
Attachment 307976 [details] pushed as 0441ae1 - ghash: Fix typo in g_hash_table_replace() documentation