ghash: Fix typo in g_hash_table_replace() documentation

https://bugzilla.gnome.org/show_bug.cgi?id=752767